--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "Pyatt">
 <HTML>
    <HEAD>
-      <TITLE>Pyatt's First HTML document</TITLE>
+      <TITLE>Regis KPyatt</TITLE>
    </HEAD>
    <BODY>
    <ol>
-   <li>Friday</li>
+   <li>This is a simple list</li>
    <ul>
 	
-      <P>This is going to be sweet!
+      <P>We are going to build and add a lot more to this site. This is a proof of concept page here</p>
    </BODY>
 </HTML>
