--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/kpyatt" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <a href="https://kpyatt.github.io/recorder"<span>Recorder</span></a>
+          <a href="https://kpyatt.github.io/Recorder"<span>Recorder</span></a>
         </section>
 
         <hr>
