--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="download-bar">
         <div class="inner">
           <a href="https://github.com/kpyatt" class="code">View Kpyatt.GitHub.io on GitHub</a>
+          <a href="https://kpyatt.github.io/recorder">Recorder</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
