--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -8,9 +8,20 @@
    <ol>
    <li>Friday</li>
    <ul>
-	
-      <P>This is going to be sweet!
-	  <i class="fa fa-circle-o" aria-hidden="true"></i>
+      <li> Assignment Updates</li>
+      <ul>
+      	<li>Assignment 3 - Professional Website</li>
+      	<p>For this assignment, you were to do one of the following. Create a professional (simple) website, where you had 3-5 pages. 
+      	This site will be developed further over time. Option 2, was to do as described in the course room (Fictioal character website).</p>
+      	<li>Assignment 4 - CSS</li>
+      	<p> For this assignment, you are to incorporate CSS into your existing Peofessional Website, paying attention to the criteria
+      	stipulated in the assignment description in the course shell (e.g., style sheets, index, external and internal css). Also, I would like for
+      	you to begin getting peer feedback for your designs.</p>
+      	<li>Assignment 5 - Javascript</li>
+      	<p> For this assignment, you are to incorporate essential and functional JS to add improved funstionality and customizability for your site.
+      	Or, you are to follow the isntructions specified in the course room for Assignment 5. In either case, be sure that the JS work you 
+      	submit here, meets the assignment criteria which can be found on the rubrics.</p>
+      </ul></p>
 
    </BODY>
 </HTML>
