--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -5,19 +5,16 @@
 	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
    </HEAD>
    <BODY>
-   <ol>
-   <li>Friday</li>
-   <ul>
-      <li> Assignment Updates</li>
+   	<h1>Assignment Updates</h1>
       <ul>
-      	<li>Assignment 3 - Professional Website</li>
+      	<li>Assignment 3 - Professional Website DUE SEP 9</li>
       	<p>For this assignment, you were to do one of the following. Create a professional (simple) website, where you had 3-5 pages. 
       	This site will be developed further over time. Option 2, was to do as described in the course room (Fictioal character website).</p>
-      	<li>Assignment 4 - CSS</li>
+      	<li>Assignment 4 - CSS DUE SEP 18</li>
       	<p> For this assignment, you are to incorporate CSS into your existing Peofessional Website, paying attention to the criteria
       	stipulated in the assignment description in the course shell (e.g., style sheets, index, external and internal css). Also, I would like for
-      	you to begin getting peer feedback for your designs.</p>
-      	<li>Assignment 5 - Javascript</li>
+      	you to begin getting peer feedback for your designs.<i>Note</i>. This assignment was extended because of our work and learning with Git.</p>
+      	<li>Assignment 5 - Javascript DUE SEP 26</li>
       	<p> For this assignment, you are to incorporate essential and functional JS to add improved funstionality and customizability for your site.
       	Or, you are to follow the isntructions specified in the course room for Assignment 5. In either case, be sure that the JS work you 
       	submit here, meets the assignment criteria which can be found on the rubrics.</p>
