--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -13,7 +13,7 @@
       	<li>Assignment 4 - CSS DUE SEP 18</li>
       	<p> For this assignment, you are to incorporate CSS into your existing Peofessional Website, paying attention to the criteria
       	stipulated in the assignment description in the course shell (e.g., style sheets, index, external and internal css). Also, I would like for
-      	you to begin getting peer feedback for your designs.<i>Note</i>. This assignment was extended because of our work and learning with Git.</p>
+      	you to begin getting peer feedback for your designs.<p></p><i>Note</i>. This assignment was extended because of our work and learning with Git.</p>
       	<li>Assignment 5 - Javascript DUE SEP 26</li>
       	<p> For this assignment, you are to incorporate essential and functional JS to add improved funstionality and customizability for your site.
       	Or, you are to follow the isntructions specified in the course room for Assignment 5. In either case, be sure that the JS work you 
