--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -7,6 +7,8 @@
    <BODY>
    	<h1>Assignment Updates</h1>
       <ul>
+      	<li>Major Assignments</li>
+      	<ul>
       	<li>Assignment 3 - Professional Website DUE SEP 9</li>
       	<p>For this assignment, you were to do one of the following. Create a professional (simple) website, where you had 3-5 pages. 
       	This site will be developed further over time. Option 2, was to do as described in the course room (Fictioal character website).</p>
