--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -21,6 +21,20 @@
       	Or, you are to follow the isntructions specified in the course room for Assignment 5. In either case, be sure that the JS work you 
       	submit here, meets the assignment criteria which can be found on the rubrics.</p>
       </ul></p>
+      <ul>
+      	<li>In-Class Assignment "aka Missions"<li>
+      	<ul>
+      	<li>Coding in the 21st Century - Mission</li>
+      	<ul>
+        	<li>Creating Your GitHub Site and Sharing</li>
+	 	<li>Creating HTML tags and authoring pages</li>
+        	<li>Adding Style to Your Site with CSS</li>
+        	<li>Incorporating JS into your GitSite</li>
+      	</ul>
+      	
+      	</li>
+      	>/li
+      	</ul>
 
    </BODY>
 </HTML>
