--- a/Recorder/index.html
+++ b/Recorder/index.html
@@ -6,8 +6,7 @@
    </HEAD>
    <BODY>
    	<h1>Assignment Updates</h1>
-      <ul>
-      	<li>Major Assignments</li>
+      	<h2>Major Assignments</h2>
       	<ul>
       	<li>Assignment 3 - Professional Website DUE SEP 9</li>
       	<p>For this assignment, you were to do one of the following. Create a professional (simple) website, where you had 3-5 pages. 
@@ -21,8 +20,7 @@
       	Or, you are to follow the isntructions specified in the course room for Assignment 5. In either case, be sure that the JS work you 
       	submit here, meets the assignment criteria which can be found on the rubrics.</p>
       </ul></p>
-      <ul>
-      	<li>In-Class Assignment "aka Missions"<li>
+      	<h2>In-Class Assignment "aka Missions"</h2>
       	<ul>
       	<li>Coding in the 21st Century - Mission</li>
       	<ul>
@@ -32,9 +30,7 @@
         	<li>Incorporating JS into your GitSite</li>
       	</ul>
       	
-      	</li>
-      	>/li
-      	</ul>
+    
 
    </BODY>
 </HTML>
