--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="download-bar">
         <div class="inner">
           
-          <a href="kpyatt.github.io/Recorder/index.html">Updates</a>
+          <a href="https://kyatt.github.io/recorder/">Updates</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
