--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="download-bar">
         <div class="inner">
           
-          <a href="https://kpyatt.github.io/updates/index.html">Updates</a>
+          <a href="https://kpyatt.github.io/updates">Updates</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
