--- a/updates/index.html
+++ b/updates/index.html
@@ -34,8 +34,15 @@
         	<li>Adding Style to Your Site with CSS</li>
         	<li>Incorporating JS into your GitSite</li>
       	</ul>
-      	
-    
-
+      	<h2>Wed September 13</h2>
+      	<p>This Wednesday we will meet at our regular time. From 12:30-1:00, you will meet with your team mates for the work you are doing with
+      	HTML tags. Get an example of one of your tags as they would be created sing the tag template we discussed today. Once you have gotten a preview
+      	to share, test the template code on your GitSite. For instance, you may create a seperate repository for your tag project, and test yout template page for your tag
+      	you just created. Once you get this working, then you can upload your tag folder to the kpyatt.github repository as was demosntrated in class on Monday Sep. 12.</p>
+      	<p>Beginning at 1:00, we will discuss where you and your partner are in regard to the tag mission. We will also take some time to go through the discussion 
+      	question for this week</p>
+    	<h2>Fri September 15</h2>
+	<p>We will continue our work on the tag mission, as well as take some time to explore and share your work you are doing on your Professional Website 
+	in regard to CSS</p>
    </BODY>
 </HTML>
