--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="inner">
           
           <a href="https://kpyatt.github.io/updates">Updates</a>
+          <a href="https://kpyatt.github.io/gittips">GitTips</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
