updated misspelled table tag

--- a/pseudostriker/index.html
+++ b/pseudostriker/index.html
@@ -4,7 +4,7 @@
 
 <script type="text/javascript">
 
-function strikeText(el, doIt) {
+function strikeText(el, doIt) { 
 if (typeof el == 'string') el = document.getElementById(el);
 el.style.textDecoration = (doIt)? 'line-through':'';
 }
@@ -45,7 +45,7 @@ a text input field "myText, the text entry for which gets created as a variable.
   <tr>
     <td id ="awesome01">Jill</td>
     <td <!--id="awesome02"-->
-		<input type="text" id="myText" value="ff">
+		<input type="text" id="myText" value="ghus.">
 		</td>
     <td><button onclick="myFunction()">Strike it</button></td>
 
@@ -53,7 +53,7 @@ a text input field "myText, the text entry for which gets created as a variable.
   </tr>
   <tr>
     <td>eve</td>
-    <td id="fart">Jackson</td>
+    <td id="farm">Jackson</td>
     <td>ery</td>
   </tr>
   <tr>
@@ -62,3 +62,4 @@ a text input field "myText, the text entry for which gets created as a variable.
     <td>80</td>
   </tr>
 </table>
+
